--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+#lock-screen, #lock-screen-on-offline {
+  display: none;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.7);
+  top: 0%;
+  right: 0%;
+  left: 0%;
+  bottom: 0%;
+  z-index: 9999;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* for offline  */
+
+#lock-screen-on-offline span {
+  position: absolute;
+  top: 46vh;
+  left: 30vw;
+  /* width: 6vw; */
+  height: 6vw;
+  border-width: 0.7rem;
+  font-size: 21px;
+  color: #ff006c;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#lock-screen span {
+  position: absolute;
+  top: 46vh;
+  left: 47vw;
+  width: 6vw;
+  height: 6vw;
+  border-width: 0.7rem;
 }
